TEZ-4699:Add Validation/Canonical checks to avoid path exploitation in CSVResult.java